--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description"
-    content="Landing Page of an aspiring Front-End Developer who is based out of Vancouver, BC. Fluent in English, German, and Bosnian. Just graduated from BCIT.">
+    content="Portfolio of a Front-End Developer who is based out of Vancouver, BC. Fluent in English, German, and Bosnian. June 2020 graduate from BCIT.">
 
   <link rel="apple-touch-icon-precomposed" sizes="57x57" href="../src/images/favicon/apple-touch-icon-57x57.png" />
   <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../src/images/favicon/apple-touch-icon-114x114.png" />
