capstone project update

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description"
-    content="Portfolio of a Front-End Developer who is based out of Vancouver, BC. Fluent in English, German, and Bosnian. June 2020 graduate from BCIT.">
+    content="Portfolio of Faris Asic Front-End Developer who is based out of Vancouver, BC. Fluent in English, German, and Bosnian. June 2020 graduate from BCIT.">
 
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon-152x152.png" />
 
