--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Vancouver, BC | Front-End Developer | Faris Asic Portfolio</title>
+  <title>Faris Asic Portfolio | Front-End Developer - Vancouver, BC</title>
 </head>
 
 <body>
