--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description"
-    content="Faris Asic Portfolio, Front-End Developer, based out of Vancouver, BC. Fluent in English, German, and Bosnian. June 2020 grad from BCIT Technical Web Developer Program.">
+    content="ReactJS built Portfolio of Faris Asic, Front-End Developer, based out of Vancouver, BC. Fluent in English, German, and Bosnian. June 2020 grad from BCIT Technical Web Developer Program.">
 
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon-152x152.png" />
 
